simplify build